# DarkMint

./: CLI_README.md  Cargo.toml  MPT_Readme.md  README.md
contracts/abi/: DarkMint.ts
contracts/interface/: IVerifyProofAggregation.sol
contracts/src/: DarkMint.sol
lib/: Cargo.toml
lib/src/: account_verification.rs  burn.rs  crypto.rs  lib.rs  main.rs  merkle_proof.rs  mint.rs  mpt_last.rs  mpt_path.rs  note.rs
program/: Cargo.toml
program/src/: main.rs
proof-sub/: aggregation.json  index.js  package-lock.json  package.json  server.js  start-api.sh
script/: Cargo.toml  build.rs  burnth.priv  proof.json
script/src/: burn.rs  lib.rs  mint.rs
script/src/commands/: burn.rs  mod.rs  prove.rs
