[package]
name = "fibonacci-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { version = "1.0.23", default-features = false }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
sha2 = "0.10.9"
rlp = "0.5.1"
light-poseidon = "0.3.0"
rand = "0.8"
tiny-keccak ={version = "2.0.2" , features = ["keccak"]}







