[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-primitives = { version =  "1.0.23" , default-features = false }
alloy-sol-types = { workspace = true }
sp1-zkvm = "5.2.1"
fibonacci-lib = { path = "../lib" }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
sha2 = "0.10.9"
hex = "0.4.3"
tiny-keccak = {version = "2.0.2" , features = ["keccak"]}
    

