[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[lib]
name = "fibonacci_script"
path = "src/lib.rs"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"




[dependencies]
sp1-sdk = { version = "5.2.1", features = ["network"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fibonacci-lib = { path = "../lib" }
dotenv = "0.15.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
rlp = "0.5.1"
alloy="1.0.1"
light-poseidon = "0.3.0"
rand = "0.8"
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
tiny-keccak ={version = "2.0.2" , features = ["keccak"]}
bincode = { version = "2", features = ["serde"] }
sp1-zkv-sdk = { git="https://github.com/zkVerify/sp1-verifier" }
reqwest = { version = "0.11", features = ["json"] }

anyhow = "1.0"

[build-dependencies]
sp1-build = "5.2.1"

    
